# cpp_space_invaders

./: CMakeLists.txt  README.md  buffer.h  main.cpp  sprite.cpp  sprite.h
game/: game.cpp  game.h  game_logic.cpp  game_logic.h  game_setup.cpp  game_setup.h
glfw-helpers/: glfw_helpers.cpp  glfw_helpers.h
sprite/: sprite.cpp  sprite.h
structs/: structs.h
